--- a/wp-content/themes/snf/styles/css/header.css
+++ b/wp-content/themes/snf/styles/css/header.css
@@ -11,7 +11,7 @@ VII.) Media Query
 ======================================================*/
 #mobileNavigation {
 
-}
+    /* width: 100%; *//* margin-left: auto; *//* margin-right: auto; */}
 @media(max-width: 768px) {
     .site-header {
         overflow-x:  hidden;
@@ -158,12 +158,12 @@ VII.) Media Query
     II.) End Navigation
 ======================================================*/
 .nav-element-responsive{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    padding: 0 !important;
-    margin: 0 !important;
+    /* display: flex; */
+    /* justify-content: space-between; */
+    /* align-items: center; */
+    /* position: relative; */
+    /* padding: 0 !important; */
+    /* margin: 0 !important; */
 }
 /*===================================================
     III.) Search Form
@@ -426,7 +426,7 @@ VII.) Media Query
         min-height: 10%;
         /* width: 25%; */
         display: flex;
-        justify-content: space-evenly;min-width: 35%;
+        justify-content: space-evenly;min-width: 50%;
         align-items: center;
         overflow: hidden;
 
@@ -446,7 +446,7 @@ VII.) Media Query
         bottom: 15%;background-color: #ffff;
         width: 100%;
         padding: 2rem 2rem;
-        clip-path: polygon(0 0, 100% 0%, 94% 100%, 0% 100%);
+        clip-path: polygon(0 0, 100% 0%, 97% 100%, 0% 100%);
         z-index: 1;
         /* height: 104%; *//* box-sizing: content-box; */
         /* min-width: 32%; */border-radius: 0px 8px 0px 10px; }
@@ -813,12 +813,12 @@ VII.) Media Query
     VIII.) Media Query
 ======================================================*/
 @media(max-width: 1480px) {
-    .snf-global-menu  #main-menu {
-        width: 95vw;
-        position: absolute;left: 0;right: 0;/* min-width: 100%; */background-color: #002d73;z-index: 99;/* height: 100%; */}
+
 }
 @media(min-width:768px) {
-
+    .snf-global-menu  #main-menu {
+        /* width: 75vw; */
+        /* position: absolute; *//* left: 0; *//* right: 0; *//* min-width: 100%; *//* background-color: #002d73; *//* z-index: 99; *//* height: 100%; */}
     #mobile-title {
         display: none;
     }
@@ -916,7 +916,7 @@ VII.) Media Query
     .shrink .global-nav-wrapper nav ul li a {
         text-transform: uppercase;
         font-size: 16px !important;
-        padding: 15px 10px;
+        /* padding: 15px 10px; */
         color: #002d73;
         /* line-height: 65px; */
     }
@@ -1156,12 +1156,12 @@ VII.) Media Query
         display: none;
     }
     .logo-navigation-container {
-        justify-content: space-evenly;
+        justify-content: space-between;
         align-items: center;
         display: inline-flex;
-        margin: 0 !important;
+        padding: 0 !important;
         width: 100%;
-        background: #fff;
+        /* background: #fff; */
         /* line-height: 70px; */
     }
     .shrink .logo-navigation-container {
@@ -1199,7 +1199,7 @@ VII.) Media Query
     .global-nav-wrapper nav {
         background-color: transparent !important;
         padding: 0;
-        display: flex;
+        /* display: flex; */
         /* align-items: center; */
         /* justify-content: end; */
         /* padding: 0 !important; */
@@ -1212,11 +1212,11 @@ VII.) Media Query
         max-width: unset;
     }
     .snf-global-menu {
-        padding: 0;
-        max-width: 1140px;
-        margin-left: auto;
-        margin-right: auto;
-        width: 100%;
+        /* padding: 0; */
+        /* max-width: 1140px; */
+        /* margin-left: auto; */
+        /* margin-right: auto; */
+        /* width: 100%; */
     }
     .shrink.snf-global-menu nav{
         padding:0 !important;
@@ -1230,7 +1230,7 @@ VII.) Media Query
     .snf-global-menu nav ul li.active a {
     }
     .snf-global-menu nav ul li:after {
-        content: " ";
+        /* content: " "; */
         position: relative;
         top: -20px;
         right: 0;
@@ -1262,10 +1262,10 @@ VII.) Media Query
         border: 0;
     }
     .global-nav-wrapper nav #main-menu li{
-        /* line-height: 65px; */
+        line-height: 65px;
     }
     .global-nav-wrapper nav #main-menu li:hover{
-        background-color: #002d73;
+        background-color: #0082CA;
         position: relative;
         /* display: flex; */
         justify-content: center;
@@ -1289,7 +1289,7 @@ VII.) Media Query
     .global-nav-wrapper nav #main-menu #menu-global-header li{padding: 0;display: flex;justify-content: space-between;align-items: center;line-height: 75px;}
 
     .global-nav-wrapper nav #main-menu #menu-global-header li.current_page_ancestor{
-        background-color:#002d73;
+        background-color: #0082CA;
 
     }
     .global-nav-wrapper nav #main-menu #menu-global-header li.current_page_ancestor a{
@@ -1297,11 +1297,11 @@ VII.) Media Query
     }
 
     .global-nav-wrapper nav #main-menu #menu-global-header li.current_page_item a{
-        font-weight:800;
+        /* font-weight:800; */
     }
 
 
-    .shrink .global-nav-wrapper nav #main-menu #menu-global-header li{padding: 0;display: flex;justify-content: flex-start;align-items: center;line-height: 25px;}
+    .shrink .global-nav-wrapper nav #main-menu #menu-global-header li{padding: 0;display: flex;justify-content: space-between;align-items: center;line-height: 25px;}
 
     .global-nav-wrapper nav #main-menu li:hover ul.dropdown-menu {
         margin-top: 0;
@@ -1357,6 +1357,15 @@ VII.) Media Query
     }
 }
 @media(min-width:992px) {
+    .logo-navigation-container {
+        justify-content: space-between;
+        align-items: center;
+        display: inline-flex;
+        padding: 0 !important;
+        width: 100%;
+        /* background: #fff; */
+        /* line-height: 70px; */
+    }
     .snf-global-menu  #main-menu {
         position: relative;
     }
@@ -1413,7 +1422,7 @@ VII.) Media Query
         top: 6px;
     }
     #main-menu {
-    }
+        background-color: #002d73;/* z-index: 49; */min-height: 450px;}
 }
 @media(max-width:767px) {
     #mobile-title {
@@ -1421,7 +1430,7 @@ VII.) Media Query
     }
     .navigation-mobile-wrapper {
         width: 100%;
-        position: relative;top: 1rem;overflow-y: visible;height: 100%;bottom: 0;z-index: 44;background-color: #002d73;}
+        position: absolute !important;top: 3rem;padding-left: 0 !important;height: 100%;padding-right: 0 !important;overflow-x: scroll;min-height: 450px;}
     .snf-global-menu  #main-menu.show {
         border-top: .5px solid #cecece;
     }
@@ -1471,7 +1480,7 @@ VII.) Media Query
         width: 100%;
     }
     #main-menu {
-    }
+        height: 100%;}
     .front-page-hero section.sliderContent {
         position: absolute;
         top: 55%;
@@ -1485,7 +1494,12 @@ VII.) Media Query
         border-radius: 0;
         padding: 0;
         border: none;
-    }
+        position: relative;}
+    .global-menu nav #main-menu li ul.dropdown-menu li.dropdown-submenu ul.sub-menu{
+        display: block;
+        position:relative;
+
+        left: 0;}
     .global-menu nav #main-menu ul.dropdown-menu li a {
         font-size: 14px;
         color: #002d73;
@@ -1494,6 +1508,9 @@ VII.) Media Query
         margin: 0;
         border: none;
         padding: 7px;
+    }
+    .global-menu nav #main-menu ul.dropdown-menu li.mobile-locations-list a.dropdown-toggle{
+        border-bottom:solid 1px #fff;
     }
     .global-menu nav ul#menu-main-navigation li {
         width: auto;
@@ -1507,7 +1524,7 @@ VII.) Media Query
     .global-menu nav ul li.active {
     }
     .global-menu nav ul li.active a {
-        background-color: #002d73;
+        /* background-color: #002d73; */
         color: #fff !important;
         /* font-weight: 700; */
     }
@@ -1527,10 +1544,10 @@ VII.) Media Query
     }
     .global-menu nav  ul.dropdown-menu li a {
     }
-    .global-menu nav ul {
+    .global-menu nav ul.navbar-nav {
         text-align: left;
-        padding: 15px 0px;
-        position: relative;}
+        /* padding: 15px 9px; */
+        position: relative;min-height: 400px;height: 100%;z-index: 50;}
     .shrink .global-nav-wrapper nav ul {
         display: block;
         position: relative;
@@ -1544,7 +1561,7 @@ VII.) Media Query
         border-top: solid 3px #fff;
     }
     .desktop-logo {
-        display:none;
+        /* display:none; */
     }
     .default-logo {
         display: block !important;
@@ -1655,11 +1672,11 @@ VII.) Media Query
         background-color: rgba(0, 45, 115, 1);
     }
     .global-menu nav {
-        width: 100%;
-        /* display: inline-block; */
-        height: 100%;
+        position: relative;
+        /* justify-content: space-between; */
+        /* overflow-x: hidden; */
         padding: 0;
-    }
+        /* left: 0; *//* width: 100%; */z-index: 7;}
     .global-menu {
         /* z-index: 44; */
     }
@@ -1667,8 +1684,8 @@ VII.) Media Query
         background-color: #002d73;
     }
     .toggleWrapper {
-        /* position: relative; */
-        /* right: 0; */
+        position: relative;
+        right: 0;
 
         /* top: 0; */
         /* margin: 3% 0; */
@@ -1957,10 +1974,10 @@ VII.) Media Query
         transform: scale(1) rotate(0deg) translate(0px,  0px) skew(-4deg,  0deg);
     }
     .snf-global-menu {
-        border-bottom: none;
-        height: 100%;
-        position: relative;
-        display: inline-flex;justify-content: space-between;align-items: center;width: 100%;padding: 0;}
+        /* border-bottom: none; */
+        /* height: 100%; */
+        /* position: relative; */
+        /* display: inline-flex; *//* justify-content: space-between; *//* align-items: center; *//* width: 100%; *//* padding: 0; */}
     .logo-navigation-container {
         /* justify-content: center; */
         /* display: flex; */
@@ -2045,7 +2062,7 @@ VII.) Media Query
         display: none;
     }
     .global-nav-wrapper {
-        position: relative;}
+        position: relative;height: 100%;width: 100%;/* overflow-x: hidden; */}
     .shrink  .dropdown-toggle {
         font-size: inherit;
         position: relative;
@@ -2183,8 +2200,8 @@ VII.) Media Query
         position: relative;
     }
     #desktopNavigation {
-        display: block;
-        top: 0;
+        /* display: block; */
+        /* padding: 0; */
         /* position: fixed; */
         /* width: 100%; */
     }
@@ -2231,8 +2248,8 @@ VII.) Media Query
         display: none;
     }
     #mobileNavigation {
-        display: inline-flex;
-        padding: 0;/* justify-content: center; *//* align-items: center; */width: 100%;height: 100%;}
+        background-color: #fff;
+        /* padding: 0; *//* justify-content: center; *//* overflow-x: scroll; */padding: 1rem 0;border-bottom: solid 1px #cecece;}
     .dropdown-submenu {
         position: relative;
     }
@@ -2480,7 +2497,7 @@ html body .content .content-wrapper .content-header-title {
         margin-left: auto;
         margin-right: auto;
         display: block;
-        padding: .5rem;box-shadow: 2px 2px 0px 0px rgb(0 0 0 / 20%);border-radius: 0;
+        /* padding: .5rem; */box-shadow: 2px 2px 0px 0px rgb(0 0 0 / 20%);border-radius: 0;
     }
     .page-header-shapes-right {
         position: absolute;
@@ -2984,51 +3001,25 @@ html body .content .content-wrapper .content-header-title {
     .country-page-title-wrapper.hover figcaption {
         /* top: calc(80%); */
     }
-    .mobile-locations-list{
-        display:none !important;
-    }
-    .desktop-locations{
-        display:block !important;
-    }
 }
 @media(max-width:991px){
     .home .transition-navbar{
-        top: 0 !important;
-        width: 100%;
         position: relative;
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-        padding: .5rem;border-bottom: solid 1px #cecece;border-radius: 0 !important;
-    }
-    .desktop-locations{
-        display:none !important;
-    }
-    .mobile-locations-list{
-        display:block !important;
+        border-bottom: solid 1px #cecece;
+        border-radius: 0 !important;
     }
     .taxonomy #custom-tax-second-nav{
-        background-color: #002d73;
+        /* background-color: #002d73; */
     }
     #custom-tax-second-nav{
         position: relative;
-        /* display: inline-flex; */
-        /* justify-content: center; */
-        /* align-items: center; */
-        /* padding: 0; */
-        /* border: none; */
-        /* top: 0; */
-        /* width: 100%; */
+        display: inline-block;
+        width: 100%;
         /* overflow-x: hidden; */}
     .second-tier-nav{
         border-radius: 0;
         border: none;
-        /* padding: 0 !important; */
-        width: 100%;
-        /* display: inline-flex; */
-        /* justify-content: center; */
-        /* max-width: 1140px; */
-        top: 0;
+        padding: 0 !important;
     }
     .shrink.subsidiary-children-pages{
         position: fixed;
@@ -3037,18 +3028,16 @@ html body .content .content-wrapper .content-header-title {
         z-index: 6;
         box-shadow: 0px 0px 21px -17px rgb(0 0 0 / 75%);
     }
-
     .page-listing-positioning{
-        /* max-width: 1140px; */
-        /* margin: 0; */
-        /* width: 100%; */
-        /* position: relative; */
-        /* overflow-x: hidden; */
-        /* right: 0; */
+        display: inline-flex;
+        height: 100%;
+        width: 100%;
+        position: relative;
+        justify-content: center;
+        align-items: center;
     }
     .subsidiary-children-pages ul li a{color:#fff;font-weight: 300;font-size: 16px;text-transform: uppercase;}
     .subsidiary-children-pages ul li.active a{color:#fff;font-weight: 600;z-index: 4;text-transform: uppercase;}
-
     /* Top & Bottom Borders Out */
     .shrink.subsidiary-children-pages ul li a{
         color:#002d73;
@@ -3061,7 +3050,7 @@ html body .content .content-wrapper .content-header-title {
     }
     .subsidiary-children-pages ul li a:after {
         bottom: 0px;
-        transform: translateY(-10px);
+        /* transform: translateY(-10px); */
     }
     .subsidiary-children-pages ul li a:hover:before, .subsidiary-children-pages ul li a:hover:after {
         opacity: 1;
@@ -3072,9 +3061,26 @@ html body .content .content-wrapper .content-header-title {
     .subsidiary-children-pages ul li a:after{
     }
     .market_nav_elements  ul li{
-        display:inline-block;
+        display: inline-flex;
+        float: none;
+        min-width: 75%;
+        width: auto;/* justify-content: center; *//* align-items: center; *//* text-align: center; *//* height: 100%; */line-height: 1.75;}
+    .subsidiary-children-pages ul{
+        /* width: 100%; */
+        display: inline-block;
+        white-space: nowrap;
+        background-color: transparent;
+        height: 100%;
+        border: none;}
+    .subsidiary-children-pages ul.dropdown-menu{
+        width: 45%;
+        display: none;
+        white-space: nowrap;
+        background-color: transparent;
+        overflow-x: auto;
+        border: none;
     }
-    .subsidiary-children-pages ul li{background-color: transparent !important;border: none;padding: .75rem;}
+    .subsidiary-children-pages ul li{background-color: transparent !important;border: none;padding: .75rem;list-style: none;}
     .shrink.subsidiary-children-pages ul{
         background-color: #fff;
         justify-content: space-between;
@@ -3308,7 +3314,7 @@ html body .content .content-wrapper .content-header-title {
     .transition-navbar{
         top: 0;
         position: relative;
-    }
+        background-color: #fff;/* overflow-x: hidden; */}
     .breadcrumbs-right .breadcrumb {
         float: right;
         background-color: transparent;
@@ -3508,3 +3514,20 @@ html body .content .content-wrapper .content-header-title {
         padding:0;
     }
 }
+@media(min-width:768px){
+    .mobile-locations-list{
+        display:none !important;
+    }
+    .desktop-locations{
+        display:block !important;
+    }
+}
+@media(max-width:767px){
+    .desktop-locations{
+        display:none !important;
+    }
+    .mobile-locations-list{
+        display:block !important;
+    }
+}
+
