--- a/wp-content/themes/snf/styles/css/typography.css
+++ b/wp-content/themes/snf/styles/css/typography.css
@@ -18,11 +18,10 @@ h1,h2,h3,h4,h5,h6{
     font-family: var(--fontFamilyPrimary);
     font-weight: 700;
 }
-
 a,  li,  li a,  p, span, b, em, button, nav {
     font-family: var(--fontFamilyPrimary);
-    font-size: 18px;
-}
+    font-size: 1rem;
+    /* color: #212529; */}
 #content h3{
 }
 /*===================================================
@@ -46,7 +45,6 @@ button, .btn, .btn-default, .btn-small{
 ======================================================*/
 .subs-content h2, .subs-content h3{
     margin: 1% 0;
-
     /* text-transform: uppercase; */
     color: #002d73;
     position: relative;
@@ -58,7 +56,6 @@ button, .btn, .btn-default, .btn-small{
 .subs-content h3{
     font-size:1.35rem;
 }
-
 .flexible-layout ul{
     line-height: 1.5em;
     margin: 5px 0 15px;
